# spider_gui

./: .gitignore  README.md  bridge.bat  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/spider_gui/: MainActivity.kt
dart_spider/: Cargo.toml
dart_spider/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  link.rs  link_state.rs  ui.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  color_schemes.g.dart  ffi.dart  main.dart
lib/ui/: connect_view.dart  page_render_view.dart  page_select_view.dart  pair_menu_view.dart  show_key_overlay.dart  spinner_view.dart  state.dart
lib/widgets/: spider_row.dart  spider_spacer.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
