[package]
name = "dart_spider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "1"
tokio = { version = "1", features = ["full"] }
spider_client = { git = "https://github.com/Ocelmot/spider" }

serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
